feat: 提升语义召回的效果 1. 降低语义召回的阈值 2. 对召回的素材随机取其中一个素材，避免素材的同质化
